# otus_cpp_14

./: .travis.yml  CMakeLists.txt  README.md  dtest.txt  inp3.txt  main.cpp  names.txt
